[package]
name = "workflow-nw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
nw-sys={path="../nw-sys"}
workflow-log="*"
workflow-wasm = {path="../workflow-wasm"}
workflow-dom ={path="../workflow-dom"}

[dependencies.web-sys]
version = "0.3.60"
features = [
    'console',
    'Document',
    'Window',
    'HtmlElement',
    'CustomEvent',
    'MouseEvent'
]
